--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: teal;
+  background-color: teal !important;
   color: white;
   text-align: center;
   padding: 10px;
